<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.QuenmkActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/maunen"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbarlayout_login">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_quenmk"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
                android:background="@color/toolbar"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="10dp"
            android:layout_below="@id/appbarlayout_login"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quenmk"
                    android:textColor="@color/toolbar"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:textSize="35sp"
                    android:textStyle="bold"/>
                <TextView
                    android:gravity="center"
                    android:text="@string/nhapemail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:paddingLeft="20dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:id="@+id/ed_email_quenmk"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khoiphuc"
                    android:layout_gravity="center"
                    android:id="@+id/btn_khoiphuc"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:background="@drawable/border_login"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</layout>