<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/maunen"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbarlayout_login">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_login"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
                android:background="@color/toolbar"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="10dp"
            android:layout_below="@id/appbarlayout_login"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/toolbar"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:textSize="35sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:id="@+id/ed_email_login"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:paddingLeft="20dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:background="@drawable/item_boder_bgwhite"
                    android:layout_marginHorizontal="10dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:paddingLeft="20dp"
                    android:hint="@string/pass"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:id="@+id/ed_pass_login"
                    android:layout_marginBottom="20dp"
                    android:imeOptions="actionDone"
                    android:background="@drawable/item_boder_bgwhite"
                    android:layout_marginHorizontal="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dang_ki"
                        android:textSize="20sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:id="@+id/tv_dki_DN"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:id="@+id/tv_quenMK_DN"
                        android:text="@string/quen_MK"/>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:layout_gravity="center"
                    android:id="@+id/btn_login"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:background="@drawable/border_login"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</layout>